copy a bunch of code from marked-element

--- a/bower.json
+++ b/bower.json
@@ -3,7 +3,9 @@
   "description": "Display a changelog from a markdown file",
   "main": "app-changelog.html",
   "dependencies": {
-    "polymer": "Polymer/polymer#^1.4.0"
+    "polymer": "Polymer/polymer#^1.4.0",
+    "paper-dialog": "^1.1.0",
+    "neon-animation": "^1.2.4"
   },
   "devDependencies": {
     "iron-component-page": "PolymerElements/iron-component-page#^1.0.0",
