--- a/bower.json
+++ b/bower.json
@@ -3,15 +3,15 @@
   "description": "Display a changelog from a markdown file",
   "main": "app-changelog.html",
   "dependencies": {
-    "polymer": "Polymer/polymer#2.0-preview",
-    "paper-dialog": "2.0-preview",
-    "neon-animation": "2.0-preview",
-    "marked-element": "2.0-preview"
+    "polymer": "Polymer/polymer#^2.0.0",
+    "paper-dialog": "^2.0.0",
+    "neon-animation": "^2.0.0",
+    "marked-element": "^2.0.0"
   },
   "devDependencies": {
-    "iron-component-page": "PolymerElements/iron-component-page#2.0-preview",
-    "iron-demo-helpers": "PolymerElements/iron-demo-helpers#2.0-preview",
+    "iron-component-page": "PolymerElements/iron-component-page#^2.0.0",
+    "iron-demo-helpers": "PolymerElements/iron-demo-helpers#^2.0.0",
     "web-component-tester": "^4.0.0",
-    "webcomponentsjs": "webcomponents/webcomponentsjs#v1"
+    "webcomponentsjs": "webcomponents/webcomponentsjs#v1.0.0"
   }
 }
